# Market_Research

./: .gitignore  README.md  boj_advanced_dashboard.html  boj_march30_to_apr03_analysis.md  boj_visual_dataset.csv  download_boj.sh  pyproject.toml
boj_downloads/html_pages/: ac260310_boj_accounts.html  ac260320_boj_accounts.html  cai_consumption_activity.html  cpi260326a_core_cpi_release.html  cpi_index_core_cpi.html  dpse260330a_computerization.html  dpse260330b_shadow_rates.html  dpse260330c_forecasting_recessions_ml.html  gap260326a_output_gap_update.html  gap_output_gap_potential_growth.html  ibs_bis_banking_stats.html  mb_monetary_base.html  rel260326a_call_for_papers.html  repo_sft_stats.html  reri_real_exports_imports.html  rev26e02_supervisory_data.html  rev26e04_natural_rate.html  rev26e05_underlying_inflation.html  sj_flow_of_funds.html  tankan03a_summary.html  tankan03b_comprehensive.html  wp26e05_policy_reaction.html  yoshi_derivatives_market.html
boj_downloads/xlsx/: cabs_current_account_by_sector.xlsx  call_money_market.xlsx  col2603_collateral.xlsx  juqf03_current_account_market_ops.xlsx  juqp2604_current_account_projections.xlsx  mei260310_jgb_held.xlsx  mei260319_jgb_held.xlsx  mei260331_jgb_held.xlsx  ope2602_market_operations.xlsx
configs/: source_registry.example.yaml
docs/: FACTOR_FRAMEWORK.md  SOURCE_STRATEGY.md
src/market_engine/: __init__.py
src/market_engine/connectors/: __init__.py
src/market_engine/features/: __init__.py
src/market_engine/models/: __init__.py
src/market_engine/pipelines/: __init__.py
